# CLI-complete

./: README.md
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/: error_log.txt  pyproject.toml  test_agent_run.py  test_ds_orchestrator.py  test_ds_search.py  test_gemma_tools.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/.aurex/: history.json
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/: __init__.py  main.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/cache/: dedup.py  sqlite_cache.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/citations/: manager.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/config/: loader.py  paths.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/core/: agent_loop.py  context_manager.py  skill_loader.py  tool_registry.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/llm/: planner.py  prompts.py  router.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/ratelimit/: limiter.py
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/aurex/search/: academic.py  deepseek_client.py  firecrawl_client.py  jina_client.py  orchestrator.py  serper_client.py  (+1 more)
.gemini/antigravity/scratch/CLI-agent-claude-cli-agent-planning-Z804h/python/tests/: test_cache.py  test_core.py  test_llm.py  test_search.py
(+114 files in other folders)
